// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`elementsToReactElements > should ignore dynamic texts by default 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "style": {
            "color": "rgba(0, 0, 0, 1)",
            "display": "flex",
            "fontFamily": "Inter",
            "fontSize": "50px",
            "fontWeight": 400,
            "height": "50px",
            "justifyContent": "flex-start",
            "left": "0px",
            "letterSpacing": "0px",
            "lineHeight": 1,
            "marginBottom": 0,
            "marginTop": 0,
            "position": "absolute",
            "textAlign": "left",
            "top": "0px",
            "width": "100px",
          },
        },
        "type": "span",
      },
    ],
    "style": {
      "display": "flex",
      "height": "100%",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`elementsToReactElements > should not render non-visible elements 1`] = `
{
  "props": {
    "children": [],
    "style": {
      "display": "flex",
      "height": "100%",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`elementsToReactElements > should render text chidrens 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": [
            "Text",
          ],
          "style": {
            "color": "rgba(0, 0, 0, 1)",
            "display": "flex",
            "fontFamily": "Inter",
            "fontSize": "50px",
            "fontWeight": 400,
            "height": "50px",
            "justifyContent": "flex-start",
            "left": "0px",
            "letterSpacing": "0px",
            "lineHeight": 1,
            "marginBottom": 0,
            "marginTop": 0,
            "position": "absolute",
            "textAlign": "left",
            "top": "0px",
            "width": "100px",
          },
        },
        "type": "p",
      },
    ],
    "style": {
      "display": "flex",
      "height": "100%",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`elementsToReactElements > should render to react elements 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "style": {
            "background": "rgba(255, 255, 255, 1)",
            "display": "flex",
            "height": "50px",
            "left": "0px",
            "position": "absolute",
            "top": "0px",
            "width": "100px",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "display": "flex",
      "height": "100%",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`elementsToReactElements > should replace dynamic texts if present 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": [
            "This is a dynamic text!",
          ],
          "style": {
            "color": "rgba(0, 0, 0, 1)",
            "display": "flex",
            "fontFamily": "Inter",
            "fontSize": "50px",
            "fontWeight": 400,
            "height": "50px",
            "justifyContent": "flex-start",
            "left": "0px",
            "letterSpacing": "0px",
            "lineHeight": 1,
            "marginBottom": 0,
            "marginTop": 0,
            "position": "absolute",
            "textAlign": "left",
            "top": "0px",
            "width": "100px",
          },
        },
        "type": "span",
      },
    ],
    "style": {
      "display": "flex",
      "height": "100%",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`exportToPng > should export a basic rectangle to png 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  4,
  176,
  0,
  0,
  2,
  118,
  8,
  6,
  0,
  0,
  0,
  79,
  64,
  123,
  92,
  0,
  0,
  17,
  5,
  73,
  68,
  65,
  84,
  120,
  156,
  237,
  216,
  49,
  1,
  0,
  48,
  12,
  4,
  161,
  212,
  191,
  232,
  175,
  141,
  27,
  64,
  6,
  111,
  187,
  29,
  0,
  0,
  0,
  0,
  68,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  237,
  3,
  247,
  118,
  93,
  126,
  42,
  139,
  64,
  202,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`renderToImg > should render to a base64 data url 1`] = `"data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIwMCIgaGVpZ2h0PSI2MzAiIHZpZXdCb3g9IjAgMCAxMjAwIDYzMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48bWFzayBpZD0ic2F0b3JpX29tLWlkIj48cmVjdCB4PSIwIiB5PSIwIiB3aWR0aD0iMTIwMCIgaGVpZ2h0PSI2MzAiIGZpbGw9IiNmZmYiLz48L21hc2s+PG1hc2sgaWQ9InNhdG9yaV9vbS1pZC0wIj48cmVjdCB4PSIwIiB5PSIwIiB3aWR0aD0iMTAwIiBoZWlnaHQ9IjUwIiBmaWxsPSIjZmZmIi8+PC9tYXNrPjxwYXRoIGZpbGw9InJnYmEoMCwgMCwgMCwgMSkiIGQ9Ik0xMy44IDEwLjlMMi40IDEwLjlMMi40IDYuOEwyOS45IDYuOEwyOS45IDEwLjlMMTguNSAxMC45TDE4LjUgNDMuMkwxMy44IDQzLjJMMTMuOCAxMC45Wk00Ny42IDQzLjhMNDcuNiA0My44UTQzLjcgNDMuOCA0MC44IDQyLjBRMzcuOSA0MC4zIDM2LjQgMzcuMVEzNC44IDM0LjAgMzQuOCAyOS44UTM0LjggMjUuNiAzNi4zIDIyLjRRMzcuOCAxOS4yIDQwLjYgMTcuNFE0My40IDE1LjYgNDcuMSAxNS42TDQ3LjEgMTUuNlE0OS4zIDE1LjYgNTEuNCAxNi4zUTUzLjUgMTcuMCA1NS4yIDE4LjZRNTYuOSAyMC4yIDU4LjAgMjIuOFE1OS4wIDI1LjQgNTkuMCAyOS4yTDU5LjAgMjkuMkw1OS4wIDMxLjBMMzkuMyAzMS4wUTM5LjQgMzMuNyA0MC4zIDM1LjZMNDAuMyAzNS42UTQxLjQgMzcuNyA0My4yIDM4LjhRNDUuMSAzOS45IDQ3LjYgMzkuOUw0Ny42IDM5LjlRNDkuMiAzOS45IDUwLjYgMzkuNFE1MS45IDM4LjkgNTIuOCAzOC4wUTUzLjggMzcuMSA1NC4zIDM1LjdMNTQuMyAzNS43TDU4LjUgMzYuOFE1Ny45IDM4LjkgNTYuNCA0MC41UTU0LjkgNDIuMCA1Mi42IDQyLjlRNTAuNCA0My44IDQ3LjYgNDMuOFpNMzkuMyAyNy4zTDM5LjMgMjcuM0w1NC41IDI3LjNRNTQuMyAyNS41IDUzLjcgMjMuOUw1My43IDIzLjlRNTIuOSAyMS44IDUxLjIgMjAuNlE0OS42IDE5LjUgNDcuMSAxOS41UTQ0LjYgMTkuNSA0Mi45IDIwLjdRNDEuMSAyMS45IDQwLjIgMjMuOEw0MC4yIDIzLjhRMzkuNCAyNS41IDM5LjMgMjcuM1pNNjguMSA0My4yTDYzLjAgNDMuMkw3Mi42IDI5LjJMNjMuNiAxNS45TDY4LjcgMTUuOUw3Mi4xIDIxLjJRNzMuNCAyMy4yIDc0LjQgMjUuMEw3NC40IDI1LjBRNzQuOCAyNS44IDc1LjIgMjYuNUw3NS4yIDI2LjVRNzUuNiAyNS44IDc2LjAgMjUuMEw3Ni4wIDI1LjBRNzYuOSAyMy4yIDc4LjIgMjEuMkw3OC4yIDIxLjJMODEuNyAxNS45TDg2LjcgMTUuOUw3Ny42IDI5LjRMODcuMSA0My4yTDgyLjAgNDMuMkw3OC4wIDM3LjFRNzYuNyAzNS4xIDc1LjggMzMuM0w3NS44IDMzLjNRNzUuNCAzMi42IDc1LjAgMzIuMEw3NS4wIDMyLjBRNzQuNyAzMi42IDc0LjMgMzMuM0w3NC4zIDMzLjNRNzMuNSAzNS4xIDcyLjEgMzcuMUw3Mi4xIDM3LjFMNjguMSA0My4yWk05Ny43IDE1LjlMMTAzLjMgMTUuOUwxMDMuMyAxOS43TDk3LjcgMTkuN0w5Ny43IDM2LjFROTcuNyAzNy45IDk4LjQgMzguOFE5OS4yIDM5LjYgMTAwLjkgMzkuNkwxMDAuOSAzOS42UTEwMS4zIDM5LjYgMTAyLjAgMzkuNVExMDIuNiAzOS40IDEwMy4yIDM5LjNMMTAzLjIgMzkuM0wxMDQuMSA0My4wUTEwMy40IDQzLjMgMTAyLjUgNDMuNFExMDEuNyA0My41IDEwMC44IDQzLjVMMTAwLjggNDMuNVE5Ny4zIDQzLjUgOTUuMyA0MS43UTkzLjMgMzkuOCA5My4zIDM2LjVMOTMuMyAzNi41TDkzLjMgMTkuN0w4OS4yIDE5LjdMODkuMiAxNS45TDkzLjMgMTUuOUw5My4zIDkuNEw5Ny43IDkuNEw5Ny43IDE1LjlaICIvPjwvc3ZnPg=="`;
